--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     background: rgb(252, 252, 252);
 }
 
-header{
+header{  /*  */
     background: url( "https://b.zmtcdn.com/web_assets/81f3ff974d82520780078ba1cfbd453a1583259680.png");
     background-position: center;
     background-repeat:no-repeat ;
